--- a/jinja2/applicationtest/dashboard.html
+++ b/jinja2/applicationtest/dashboard.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>DASHBOARD PAGE</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="{{ static('css/applicationtest/login.css')}}">
 </head>
 <body>
-<h1>WELCOME TO YOUR DASHBOARD</h1>
-<button><a href="{{ '/applicationtest/logout' }}">Logout</a></button>
+<h1 class="page-title">WELCOME TO YOUR DASHBOARD</h1>
+<br>
+<br>
+<br>
+<a href="{{ url('logout') }}"><button class="btn btn-primary btn-block form-container">Logout</button></a>
 </body>
 </html>
