--- a/jinja2/applicationtest/home.html
+++ b/jinja2/applicationtest/home.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>HOME PAGE</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="{{ static('css/applicationtest/login.css')}}">
 </head>
 <body>
-<h1>This is your home page!</h1>
-<button><a href="{{ '/applicationtest/login' }}">Login</a></button>
-<button><a href="{{ '/applicationtest/register' }}">Register</a></button>
+<h1 class="page-title">Please log in!</h1>
+<br>
+<br>
+<br>
+<a href="{{ url('login') }}"><button class="btn btn-primary btn-block form-container">Login</button></a>
+<br>
+<a href="{{ '/applicationtest/login' }}"><button class="btn btn-primary btn-block form-container">Login</button></a>
+<br>
+<a href="{{ url('register') }}"><button class="btn btn-primary btn-block form-container">Register</button></a>
 {#<button onclick="location.href='http://127.0.0.1:8000/applicationtest/login'">Login</button>#}
 </body>
 </html>
