--- a/jinja2/applicationtest/login.html
+++ b/jinja2/applicationtest/login.html
@@ -3,13 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>LOGIN PAGE</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="{{ static('css/applicationtest/login.css')}}">
 </head>
 <body>
+<br>
+<br>
+<br>
+<h2 class="page-title">LOG IN</h2>
+<br>
     <form action="login.html" method="post">
-        <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-        <input type="text" placeholder="Enter Username" name="username" required>
-        <input type="password" placeholder="Enter Password" name="password" required>
-        <button type="submit">Login</button>
+        <div class="form-container">
+            <div class="form-group">
+                <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Enter Username" name="username" required>
+            </div>
+            <div class="form-group">
+                <input type="password" class="form-control" placeholder="Enter Password" name="password" required>
+            </div>
+            <div class="form-group">
+                <button  class="btn btn-primary btn-block" type="submit">Login</button>
+            </div>
+        </div>
     </form>
 </body>
 </html>
