--- a/jinja2/applicationtest/synced.html
+++ b/jinja2/applicationtest/synced.html
@@ -14,12 +14,6 @@
     <link rel="stylesheet" href="{{ static('css/applicationtest/login.css')}}">
 </head>
 <body>
-<h1 class="page-title">WELCOME TO YOUR DASHBOARD</h1>
-<br>
-<br>
-<br>
-<a href="{{ url('logout') }}"><button class="btn btn-primary btn-block form-container">Logout</button></a>
-<br>
-<a href="{{ url('sync') }}"><button class="btn btn-primary btn-block form-container">Sync</button></a>
+<h1 class="page-title">The Database is synchronized up to date!</h1>
 </body>
 </html>
