--- a/jinja2/applicationtest/home.html
+++ b/jinja2/applicationtest/home.html
@@ -23,6 +23,8 @@
 <a href="{{ '/applicationtest/login' }}"><button class="btn btn-primary btn-block form-container">Login</button></a>
 <br>
 <a href="{{ url('register') }}"><button class="btn btn-primary btn-block form-container">Register</button></a>
+<br>
+<a href="{{ url('alter') }}"><button class="btn btn-primary btn-block form-container">Alter Register</button></a>
 {#<button onclick="location.href='http://127.0.0.1:8000/applicationtest/login'">Login</button>#}
 </body>
 </html>
